# euniverse

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/euniverse/: __init__.py  annotations.py  astronomical_viewer.pro  catalog_manager.py  catalog_manager.py~  catalog_plotter.py  catalog_plotter.py~  catalog_plotter.ui  control_dock.py  control_dock.py~  control_dock.ui  euniverse.py  euniverse.py~  generate_icons.py  image_exporter.py  image_viewer.py  image_viewer.py~  table_dialog.py  wcs_utils.py  workers.py
