[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "euniverse"
version = "0.9.0"
authors = [
  { name="Mischa Schirmer", email="your@email.com" },
]
description = "A comprehensive tool to visualize Euclid color images created with eummy, and associated catalogs"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "PyQt5",
    "numpy",
    "astropy>=5.2",
    "matplotlib",
    "opencv-python",
    "scipy",
    "tifffile",
    "requests",
    "eummy"
]

[project.scripts]
euniverse = "euniverse.euniverse:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
euniverse = ["*.ui", "*.pro"]
