[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "euniverse"
version = "1.0.0"
authors = [
  { name="Mischa Schirmer", email="schirmer@mpia.de" },
]
description = "A comprehensive tool to visualize Euclid color images created with eummy, and associated catalogs"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "PyQt5",
    "numpy",
    "astropy>=5.2",
    "matplotlib",
    "opencv-python",
    "scipy",
    "tifffile",
    "eummy"
]

[project.scripts]
euniverse = "euniverse.euniverse:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
euniverse = ["*.ui", "*.pro"]
